--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "nuxt": "^2.15.7",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "swiper": "^7.3.4",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
